sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: not found: value +
    for (i+gap <- 0 to getValueCount() - gap - 1) {
          ^AlgCombSort:11: error: not found: value +
    for (i+gap <- 0 to getValueCount() - gap - 1) {
          ^